--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,33 @@
-version: "2.2"
+version: "3.1"
 
+#services:
+ # mysql:
+ #   image: mysql:5.7
+ #   ports:
+ #     - "3306:3306"
+ #   environment:
+ #     - MYSQL_ROOT_PASSWORD=
+ #     - MYSQL_ALLOW_EMPTY_PASSWORD=true
+ #     - MYSQL_USER=petclinic
+ #     - MYSQL_PASSWORD=petclinic
+ #     - MYSQL_DATABASE=petclinic
+ #   volumes:
+ #
 services:
-  mysql:
-    image: mysql:5.7
+  API:
+    image: 'petclinic'
     ports:
-      - "3306:3306"
+      - "8080:8080"
+    depends_on:
+      PostgreSQL:
+        condition: service_healthy
     environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_ALLOW_EMPTY_PASSWORD=true
-      - MYSQL_USER=petclinic
-      - MYSQL_PASSWORD=petclinic
-      - MYSQL_DATABASE=petclinic
-    volumes:
-      - "./conf.d:/etc/mysql/conf.d:ro"
-  postgres:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://PostgreSQL:5432/petclinic
+      - SPRING_DATASOURCE_USERNAME=petclinic
+      - SPRING_DATASOURCE_PASSWORD=petclinic
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+
+  PostgreSQL:
     image: postgres:14.1
     ports:
       - "5432:5432"
@@ -21,3 +35,8 @@ services:
       - POSTGRES_PASSWORD=petclinic
       - POSTGRES_USER=petclinic
       - POSTGRES_DB=petclinic
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U petclinic"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
