--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -15,19 +15,24 @@ spec:
       containers:
         - name: api
           image: fathallahaymen/petclinic
+          resources:
+            # Add resource requirements here
           ports:
             - containerPort: 8080
           env:
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://postgresqldb:5432/petclinic
+              value: jdbc:postgresql://localhost:5432/petclinic
             - name: SPRING_DATASOURCE_USERNAME
               value: petclinic
             - name: SPRING_DATASOURCE_PASSWORD
               value: petclinic
             - name: SPRING_JPA_HIBERNATE_DDL_AUTO
               value: update
+          # Add livenessProbe here
         - name: postgresqldb
           image: postgres:14.1
+          resources:
+            # Add resource requirements here
           ports:
             - containerPort: 5432
           env:
@@ -48,6 +53,7 @@ spec:
             timeoutSeconds: 5
             successThreshold: 1
             failureThreshold: 5
+
 ---
 apiVersion: v1
 kind: Service
