--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -68,3 +68,30 @@ spec:
       targetPort: 8080
   type: ClusterIP
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: petclinic-loadbalancer
+spec:
+  selector:
+    app: petclinic
+  ports:
+    - name: http
+      port: 8080
+      targetPort: 8080
+  type: LoadBalancer
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: petclinic-service-nodeport
+spec:
+  selector:
+    app: petclinic
+  ports:
+    - name: http
+      port: 8080
+      targetPort: 8080
+  type: NodePort
+
